# logone

./: .replit  Cargo.toml  LICENSE-APACHE  README.md  flake.nix  replit.md
examples/: example.stdin10  example.stdin10.nix-output  example.stdin11  example.stdin13  example.stdin13.nix-output  example.stdin14  example.stdin15  example.stdin3  example.stdin5  example.stdin8  example.stdin8.nix-output  example.stdin9.nix-output
passthru-test/: README.md  a.nix  b.nix  c.nix  d.nix  default.nix  e.nix  f.nix
src/: display.rs  lib.rs  logone.rs  logs.rs  main.rs  misc.rs  parse.rs  parser.rs  stats.rs  status.rs
src/sinks/: cargo_logs.rs  mod.rs  nix_build_statistics.rs  nix_logs.rs
tests/: example.stdin1  example.stdin11  example.stdin12  example.stdin2  example.stdin4  example.stdin6  example.stdin7  example.stdin9
