[package]
name = "logone"
version = "0.2.9"
edition = "2021"
authors = ["Joachim Schiele <js@lastlog.de>"]
description = "A command-line tool that parses Nix's --log-format json-internal output as standalone and crate library"
license = "MIT OR Apache-2.0" 
repository = "https://github.com/nixcloud/logone"
readme = "README.md"
keywords = ["logger", "logging"]
categories = ["development-tools::debugging"]

[lib]
name = "logone"

[[bin]]
name = "logone"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
console = "0.15"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
